# cs-legit

./: README.md  admin-panel.command  admin-simple.command  open-admin.command
.github/workflows/: build.yml  deploy-server.yml  deploy.yml  hypervisor.yml  kernel.yml  launcher.yml
docs/: ADMIN_PANEL.md  ARCHITECTURE.md  GITHUB_SETUP.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SECURITY_FIX.md  SSH_SETUP.md  TROUBLESHOOTING.md
hypervisor-cheat/: CMakeLists.txt  README.md
hypervisor-cheat/bootkit/: bootkit.c
hypervisor-cheat/common/: offsets.h  types.h  vmcall_codes.h
hypervisor-cheat/docs/: SAFETY.md  TESTING.md
hypervisor-cheat/hypervisor/include/: ept.h  safety.h  vmcall.h  vmx.h
hypervisor-cheat/hypervisor/src/: safety.c
hypervisor-cheat/injector/: CMakeLists.txt  main.cpp
hypervisor-cheat/internal/: CMakeLists.txt
hypervisor-cheat/internal/include/: esp.hpp  hooks.hpp  lazy_import.hpp  memory.hpp  xorstr.hpp
hypervisor-cheat/internal/src/: dllmain.cpp  esp.cpp  hooks.cpp
hypervisor-cheat/usermode/include/: esp.hpp  hypervisor.hpp
hypervisor-cheat/usermode/src/: esp.cpp  hypervisor.cpp  main.cpp  vmcall.asm
kernel/: CMakeLists.txt  README.md
kernel/docs/: RING0.md  UNIVERSAL_CHEAT_FRAMEWORK.md
kernel/ring_minus1/: CMakeLists.txt
kernel/ring_minus1/hypervisor/: ia32.h  vmx.h
kernel/ring_minus2/: CMakeLists.txt
kernel/ring_minus2/smm/: smm_handler.h
kernel/ring_minus3/: CMakeLists.txt
kernel/ring_minus3/uefi/: bootkit.h
kernel/usermode/: CMakeLists.txt
kernel/usermode/example/: main.cpp
kernel/usermode/include/: kernel_interface.hpp
kernel/usermode/src/: interface.cpp
launcher/: CMakeLists.txt  launcher.manifest
launcher-server/admin-panel/: index.html
launcher-server/backend/: package.json
launcher-server/backend/src/: index.js
launcher-server/backend/src/database/: migrate.js
launcher-server/backend/src/middleware/: auth.js
launcher-server/backend/src/routes/: admin.js  auth.js  download.js  games.js
launcher-server/backend/src/services/: telegramMonitor.js
launcher-server/launcher/: CMakeLists.txt
launcher-server/launcher/include/: api.hpp  injector.hpp
launcher-server/launcher/src/: api.cpp  injector.cpp  main.cpp
launcher-server/public/: index.html
launcher-server/storage/offsets/: cs2.json
launcher/src/: api.cpp  api.hpp  main.cpp  updater.hpp  xorstr.hpp
server/: .gitignore  DEPLOY.md  HOW_IT_WORKS.md  QUICK_START.md  RAILWAY_DEPLOY.md  README.md  config.example.json  package.json  server.js  upload-example.sh
